--- a/.ci/azure-pipelines.yml
+++ b/.ci/azure-pipelines.yml
@@ -4,6 +4,14 @@
 # - ./_settings/base.partial.yml -- change here
 # - ./_settings/ci.yml
 # - ./_settings/ci.partial.yml --or change here
+parameters:
+  - name: sb_test_shards
+    type: number
+    default: 0
+  - name: e2e_test_shards
+    type: number
+    default: 0
+
 trigger:
   branches:
     include:
@@ -18,3 +26,5 @@ extends:
   template: azure-pipelines-template.yml
   parameters:
     name: ci
+    sb_test_shards: ${{ parameters.sb_test_shards }}
+    e2e_test_shards: ${{ parameters.e2e_test_shards }}
