Switch to /minimal in react-query-swagger

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,7 +42,7 @@
     "react-i18next": "12.1.1",
     "react-merge-refs": "2.0.1",
     "react-paginate": "8.1.4",
-    "react-query-swagger": "15.4.2",
+    "react-query-swagger": "15.5.1-rc8",
     "react-redux": "8.0.2",
     "react-router": "6.3.0",
     "react-router-dom": "6.3.0",
@@ -53,7 +53,7 @@
     "react-window": "1.8.7",
     "redux": "4.2.0",
     "redux-persist": "6.0.0",
-    "superjson": "1.12.1",
+    "superjson": "1.12.2",
     "throttle-debounce": "3.0.1",
     "web-vitals": "1.1.2"
   },
@@ -98,8 +98,8 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-storybook": "0.6.10",
     "importmap-plugin": "0.8.0",
-    "nock": "13.2.9",
-    "prettier": "2.8.1",
+    "nock": "13.3.0",
+    "prettier": "2.8.4",
     "prop-types": "15.8.1",
     "react-devtools": "4.27.1",
     "redux-devtools-extension": "2.13.9",
@@ -109,7 +109,7 @@
     "storybook": "7.0.0-beta.45",
     "tsconfig-paths-webpack-plugin": "4.0.0",
     "typescript": "4.9.3",
-    "vite": "4.1.1",
+    "vite": "4.1.4",
     "vite-plugin-mkcert": "1.13.0",
     "vite-plugin-react-svg": "0.2.0",
     "vite-plugin-svgr": "2.4.0",
@@ -127,8 +127,8 @@
     "preview": "TST=321 npx import-meta-env -x .env && vite preview --port 5003",
     "preview-remote": "TST=321 npx import-meta-env -x .env && BACKEND_URI=https://template.mcc-soft.de vite preview --port 5003",
     "generate-api-clients": "concurrently \"yarn generate-api-client-axios\" \"yarn generate-api-client-dotnet\"",
-    "generate-api-client-axios": "react-query-swagger openapi2tsclient /tanstack /input:https://localhost:5001/swagger/v1/swagger.json /output:src/services/api/api-client.ts /template:Axios /serviceHost:. /use-recommended-configuration",
-    "generate-api-client-remote": "react-query-swagger openapi2tsclient /tanstack /input:https://template.mcc-soft.de/swagger/v1/swagger.json /output:src/services/api/api-client.ts /template:Axios /serviceHost:. /use-recommended-configuration",
+    "generate-api-client-axios": "react-query-swagger openapi2tsclient /tanstack /input:https://localhost:5001/swagger/v1/swagger.json /output:src/services/api/api-client.ts /template:Axios /serviceHost:. /minimal",
+    "generate-api-client-remote": "react-query-swagger openapi2tsclient /tanstack /input:https://template.mcc-soft.de/swagger/v1/swagger.json /output:src/services/api/api-client.ts /template:Axios /serviceHost:. /minimal",
     "generate-api-client-dotnet": "nswag openapi2csclient /input:https://localhost:5001/swagger/csharp/swagger.json /output:../webapi/src/MccSoft.TemplateApp.Http/GeneratedClient.cs /templateDirectory:../webapi/src/MccSoft.TemplateApp.Http/template /namespace:MccSoft.TemplateApp.Http.Generated /generateClientInterfaces:true /clientBaseClass:BaseClient /exposeJsonSerializerSettings:true /generateUpdateJsonSerializerSettingsMethod:false /clientBaseInterface:IBaseClient /jsonLibrary:SystemTextJson && yarn replace \", NullValueHandling = Newtonsoft.Json.NullValueHandling.Ignore\" \" \" ../webapi/src/MccSoft.TemplateApp.Http/GeneratedClient.cs",
     "npm-start": "yarn start",
     "storybook": "storybook dev -p 6006",
