--- a/e2e/package.json
+++ b/e2e/package.json
@@ -14,7 +14,7 @@
     "http-server": "14.1.1",
     "nswag": "13.18.2",
     "randomstring": "1.2.3",
-    "react-query-swagger": "15.4.2",
+    "react-query-swagger": "15.5.1-rc8",
     "sinon": "15.0.1",
     "typescript": "4.9.5"
   },
@@ -24,8 +24,8 @@
     "eslint": "eslint --config \\.eslintrc.js --no-eslintrc \\*\\*/\\*.ts --quiet ",
     "test-storybook": "STORYBOOK=1 npx playwright test",
     "test": "npx playwright test",
-    "generate-api-client": "react-query-swagger /input:https://localhost:5001/swagger/v1/swagger.json /output:src/api/query-client.ts /template:Axios /serviceHost:. /no-hooks /use-recommended-configuration",
-    "generate-api-client-remote": "react-query-swagger /input:https://template.mcc-soft.de/swagger/v1/swagger.json /output:src/api/query-client.ts /template:Axios /serviceHost:. /no-hooks /use-recommended-configuration",
+    "generate-api-client": "react-query-swagger /input:https://localhost:5001/swagger/v1/swagger.json /output:src/api/query-client.ts /template:Axios /serviceHost:. /no-hooks /minimal",
+    "generate-api-client-remote": "react-query-swagger /input:https://template.mcc-soft.de/swagger/v1/swagger.json /output:src/api/query-client.ts /template:Axios /serviceHost:. /no-hooks /minimal",
     "update-storybook-snapshots-linux": "cd .. && docker run --env STORYBOOK_URL=http://host.docker.internal:6006 --rm --network host -v $(pwd):/work/ -w /work/e2e -it mcr.microsoft.com/playwright:v1.30.0-focal npx playwright test storybook -j 1 --update-snapshots",
     "update-e2e-snapshots-linux": "cd .. && docker run --env STORYBOOK_URL=http://host.docker.internal:6006 --rm --network host -v $(pwd):/work/ -w /work/e2e -it mcr.microsoft.com/playwright:v1.30.0-focal npx playwright test tests -j 1 --update-snapshots"
   }
