--- a/frontend/package.json
+++ b/frontend/package.json
@@ -65,9 +65,9 @@
     "@storybook/addon-essentials": "7.0.0-beta.45",
     "@storybook/addon-interactions": "7.0.0-beta.45",
     "@storybook/addon-links": "7.0.0-beta.45",
-    "@storybook/blocks": "7.0.6",
+    "@storybook/blocks": "7.0.0-beta.45",
     "@storybook/react": "7.0.0-beta.45",
-    "@storybook/react-vite": "7.0.6",
+    "@storybook/react-vite": "7.0.0-beta.45",
     "@storybook/testing-library": "0.0.14-next.1",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
@@ -106,7 +106,7 @@
     "replace": "1.2.2",
     "rollup-plugin-visualizer": "5.8.3",
     "sass": "1.57.1",
-    "storybook": "7.0.6",
+    "storybook": "7.0.0-beta.45",
     "tsconfig-paths-webpack-plugin": "4.0.0",
     "typescript": "4.9.3",
     "vite": "4.1.4",
