--- a/e2e/package.json
+++ b/e2e/package.json
@@ -4,8 +4,8 @@
   "devDependencies": {
     "@playwright/test": "1.30.0",
     "@types/randomstring": "1.1.8",
-    "@typescript-eslint/eslint-plugin": "5.50.0",
-    "@typescript-eslint/parser": "5.50.0",
+    "@typescript-eslint/eslint-plugin": "5.59.0",
+    "@typescript-eslint/parser": "5.59.0",
     "axios": "1.3.2",
     "dotenv": "16.0.3",
     "eslint": "8.33.0",
@@ -14,9 +14,9 @@
     "http-server": "14.1.1",
     "nswag": "13.18.2",
     "randomstring": "1.2.3",
-    "react-query-swagger": "15.5.1-rc8",
+    "react-query-swagger": "15.6.12",
     "sinon": "15.0.1",
-    "typescript": "4.9.5"
+    "typescript": "5.0.4"
   },
   "scripts": {
     "typecheck": "yarn tsc && yarn eslint",
