--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,9 @@
     "@reduxjs/toolkit": "1.9.2",
     "@sentry/react": "7.37.1",
     "@sentry/tracing": "7.37.1",
-    "@tanstack/react-query": "4.24.4",
-    "@tanstack/react-query-persist-client": "4.24.4",
-    "@tanstack/react-table": "8.7.9",
+    "@tanstack/react-query": "4.29.3",
+    "@tanstack/react-query-persist-client": "4.29.3",
+    "@tanstack/react-table": "8.8.5",
     "@types/react-paginate": "7.1.1",
     "axios": "1.3.2",
     "axios-auth-refresh": "3.3.6",
@@ -41,13 +41,12 @@
     "react-hook-form": "7.43.9",
     "react-i18next": "12.1.1",
     "react-merge-refs": "2.0.1",
-    "react-paginate": "8.1.4",
-    "react-query-swagger": "15.5.2",
+    "react-paginate": "8.2.0",
+    "react-query-swagger": "15.6.12",
     "react-redux": "8.0.2",
     "react-router": "6.3.0",
     "react-router-dom": "6.3.0",
     "react-router-url-params": "0.7.5",
-    "react-table": "7.8.0",
     "react-textarea-autosize": "8.3.4",
     "react-use": "17.4.0",
     "react-window": "1.8.7",
@@ -61,14 +60,14 @@
     "@babel/core": "7.20.12",
     "@import-meta-env/cli": "0.5.1",
     "@import-meta-env/unplugin": "0.4.4",
-    "@mdx-js/react": "1.6.22",
-    "@storybook/addon-essentials": "7.0.0-beta.45",
-    "@storybook/addon-interactions": "7.0.0-beta.45",
-    "@storybook/addon-links": "7.0.0-beta.45",
-    "@storybook/blocks": "7.0.0-beta.45",
-    "@storybook/react": "7.0.0-beta.45",
-    "@storybook/react-vite": "7.0.0-beta.45",
-    "@storybook/testing-library": "0.0.14-next.1",
+    "@mdx-js/react": "2.3.0",
+    "@storybook/addon-essentials": "7.0.6",
+    "@storybook/addon-interactions": "7.0.6",
+    "@storybook/addon-links": "7.0.6",
+    "@storybook/blocks": "7.0.6",
+    "@storybook/react": "7.0.6",
+    "@storybook/react-vite": "7.0.6",
+    "@storybook/testing-library": "0.1.0",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "14.4.3",
@@ -80,10 +79,10 @@
     "@types/react-window": "1.8.5",
     "@typescript-eslint/eslint-plugin": "5.59.0",
     "@typescript-eslint/parser": "5.59.0",
-    "@vitejs/plugin-react": "3.1.0",
-    "@vitejs/plugin-react-swc": "3.1.0",
+    "@vitejs/plugin-react": "4.0.0",
+    "@vitejs/plugin-react-swc": "3.3.0",
     "babel-loader": "8.3.0",
-    "concurrently": "6.5.1",
+    "concurrently": "8.0.1",
     "cross-env": "7.0.3",
     "dotenv": "16.0.3",
     "eslint": "8.26.0",
@@ -99,22 +98,22 @@
     "eslint-plugin-storybook": "0.6.10",
     "importmap-plugin": "0.8.0",
     "nock": "13.3.0",
-    "prettier": "2.8.4",
+    "prettier": "2.8.7",
     "prop-types": "15.8.1",
     "react-devtools": "4.27.1",
     "redux-devtools-extension": "2.13.9",
     "replace": "1.2.2",
-    "rollup-plugin-visualizer": "5.8.3",
-    "sass": "1.57.1",
-    "storybook": "7.0.0-beta.45",
-    "tsconfig-paths-webpack-plugin": "4.0.0",
+    "rollup-plugin-visualizer": "5.9.0",
+    "sass": "1.62.0",
+    "storybook": "7.0.6",
+    "tsconfig-paths-webpack-plugin": "4.0.1",
     "typescript": "5.0.4",
-    "vite": "4.1.4",
-    "vite-plugin-mkcert": "1.13.0",
+    "vite": "4.3.1",
+    "vite-plugin-mkcert": "1.14.0",
     "vite-plugin-react-svg": "0.2.0",
     "vite-plugin-svgr": "2.4.0",
-    "vite-tsconfig-paths": "4.0.5",
-    "vitest": "0.28.4"
+    "vite-tsconfig-paths": "4.2.0",
+    "vitest": "0.30.1"
   },
   "scripts": {
     "start": "yarn prestart && vite",
