--- a/webapi/Lib/WebApi/MccSoft.WebApi/MccSoft.WebApi.csproj
+++ b/webapi/Lib/WebApi/MccSoft.WebApi/MccSoft.WebApi.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="OpenIddict.AspNetCore" Version="3.1.1" />
     <PackageReference Include="Sentry.AspNetCore" Version="3.24.0" />
     <PackageReference Include="NeinLinq.EntityFrameworkCore" Version="6.1.0" />
+    <PackageReference Include="NSwag.AspNetCore" Version="13.18.0" />
   </ItemGroup>
 
   <ItemGroup>
