--- a/webapi/Lib/WebApi/MccSoft.WebApi/MccSoft.WebApi.csproj
+++ b/webapi/Lib/WebApi/MccSoft.WebApi/MccSoft.WebApi.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Roslyn.Analyzers" Version="1.0.3.4" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.15.1" />
     <PackageReference Include="Vp.Roslyn.Analyzers.All" Version="1.0.0" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.9" />
     <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.2.0" />
@@ -17,9 +18,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
     <PackageReference Include="NJsonSchema" Version="10.8.0" />
-    <PackageReference Include="OpenIddict.EntityFrameworkCore.Models" Version="3.1.1" />
-    <PackageReference Include="OpenIddict.Server" Version="3.1.1" />
-    <PackageReference Include="OpenIddict.AspNetCore" Version="3.1.1" />
+    <PackageReference Include="OpenIddict.EntityFrameworkCore.Models" Version="4.2.0" />
+    <PackageReference Include="OpenIddict.Server" Version="4.2.0" />
+    <PackageReference Include="OpenIddict.AspNetCore" Version="4.2.0" />
     <PackageReference Include="Sentry.AspNetCore" Version="3.30.0" />
     <PackageReference Include="NeinLinq.EntityFrameworkCore" Version="6.1.0" />
     <PackageReference Include="NSwag.AspNetCore" Version="13.18.0" />
