--- a/e2e/.env
+++ b/e2e/.env
@@ -1,6 +1,6 @@
 # You could copy this file to .env.local and override values there.
 # Just don't commit .env.local (btw, it's in gitignore by default)
-PROXY_HOST=
-PROXY_PORT=
+#PROXY_HOST=localhost
+#PROXY_PORT=8888
 BASE_URL=https://template.mcc-soft.de
 STORYBOOK_URL=http://localhost:6006
