feat(logging): Add ability to exclude requests from logs by path

--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.json
@@ -14,6 +14,16 @@
       "Password": "",
       "EnableFileBuffer": false
     },
+    "RequestLogging": {
+      "ExcludePaths": [
+        "/api/profiler",
+        "/hangfire",
+        "/Identity/lib",
+        "/resources",
+        "/css",
+        "/.well-known/openid-configuration"
+      ]
+    },
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
