--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.json
@@ -34,7 +34,8 @@
         "Microsoft.EntityFrameworkCore": "Information",
         "Microsoft.EntityFrameworkCore.Database.Command": "Fatal",
         "Microsoft.EntityFrameworkCore.Update": "Fatal",
-        "Microsoft.AspNetCore": "Warning"
+        "Microsoft.AspNetCore": "Warning",
+        "OpenIddict.Server.OpenIddictServerDispatcher": "Warning"
       }
     }
   },
