--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.json
@@ -14,6 +14,16 @@
       "Password": "",
       "EnableFileBuffer": false
     },
+    "RequestLogging": {
+      "ExcludePaths": [
+        "/api/profiler",
+        "/hangfire",
+        "/Identity/lib",
+        "/resources",
+        "/css",
+        "/.well-known/openid-configuration"
+      ]
+    },
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
@@ -24,7 +34,8 @@
         "Microsoft.EntityFrameworkCore": "Information",
         "Microsoft.EntityFrameworkCore.Database.Command": "Fatal",
         "Microsoft.EntityFrameworkCore.Update": "Fatal",
-        "Microsoft.AspNetCore": "Warning"
+        "Microsoft.AspNetCore": "Warning",
+        "OpenIddict.Server.OpenIddictServerDispatcher": "Warning"
       }
     }
   },
