--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "jwt-decode": "3.1.2",
     "lottie-web": "5.10.0",
     "material-ui-popup-state": "5.0.4",
+    "nswag": "13.18.2",
     "oidc-client-ts": "2.2.0",
     "query-string": "7.1.1",
     "react": "18.2.0",
