--- a/webapi/Lib/LowLevelPrimitives/MccSoft.LowLevelPrimitives/MccSoft.LowLevelPrimitives.csproj
+++ b/webapi/Lib/LowLevelPrimitives/MccSoft.LowLevelPrimitives/MccSoft.LowLevelPrimitives.csproj
@@ -11,6 +11,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+    <PackageReference Include="NeinLinq" Version="6.1.0" />
+    <PackageReference Include="SystemTextJson.JsonDiffPatch" Version="1.3.1" />
   </ItemGroup>
 
   <ItemGroup>
