fix AccessTokenLifetime in development

--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.Development.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.Development.json
@@ -9,11 +9,6 @@
       }
     }
   },
-  "Clients": {
-    "web_client": {
-      "AccessTokenLifetime": 60
-    }
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -56,6 +51,7 @@
   "OpenId": {
     "Clients": {
       "web_client": {
+        "AccessTokenLifetime" : 60,
         "RedirectUris": [
           "https://localhost:5001/auth/openid-callback",
           "https://localhost:5001/auth/openid-callback?popup=1",
