--- a/webapi/src/MccSoft.TemplateApp.App/MccSoft.TemplateApp.App.csproj
+++ b/webapi/src/MccSoft.TemplateApp.App/MccSoft.TemplateApp.App.csproj
@@ -78,7 +78,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Shaddix.OpenIddict.ExternalAuthentication" Version="2.4.3" />
+    <PackageReference Include="Shaddix.OpenIddict.ExternalAuthentication" Version="2.6.4" />
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.2" />
     <PackageReference Include="OpenIddict.AspNetCore" Version="4.2.0" />
     <PackageReference Include="OpenIddict.EntityFrameworkCore" Version="4.2.0" />
@@ -96,6 +96,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="..\..\..\docker-compose.yaml">
+      <Link>docker-compose.yaml</Link>
+    </Content>
     <Content Include="..\..\..\package.json">
       <Link>package.json</Link>
     </Content>
