--- a/.ci/_settings/base.yml
+++ b/.ci/_settings/base.yml
@@ -31,6 +31,7 @@ variables:
   # Deployment
   DOCKER_TAG: latest
   ENABLE_DEPLOY: true
-  ENABLE_TAG_SOURCES: false
+  TAG_SOURCES_DEV:
+  TAG_SOURCES_PROD:
   DEPLOY_IF_STORYBOOK_FAILS: false
   # -----------
