--- a/scripts/.env_template
+++ b/scripts/.env_template
@@ -9,7 +9,6 @@ Serilog__Elastic__Url=
 Serilog__Elastic__User=
 Serilog__Elastic__Password=
 TestApiEnabled=false
-# !!! When adding variables here don't forget to add them to docker-compose.yml as well !!!
-
-
 POSTGRES_DATABASE=template_app
+POSTGRES_EXTERNAL_PORT=5432
+POSTGRES_USER=postgres
