--- a/.gitignore
+++ b/.gitignore
@@ -368,3 +368,4 @@ webapi/src/MccSoft.TemplateApp.App/wwwroot/css/frontend.css
 webapi/src/MccSoft.TemplateApp.App/wwwroot/css/frontend.css.map
 frontend/storybook-static
 e2e/.env.local
+scripts/.env
