--- a/k8s-configs/postgres.yaml
+++ b/k8s-configs/postgres.yaml
@@ -8,9 +8,8 @@ metadata:
   labels:
     app: postgres
 data:
-  POSTGRES_USER: ${POSTGRES_USER}
-  POSTGRES_DB: ${POSTGRES_DB}
-  POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+  POSTGRES_USER: '${POSTGRES_USER}'
+  POSTGRES_PASSWORD: '${POSTGRES_PASSWORD}'
 ---
 # apiVersion: v1
 # kind: PersistentVolume
@@ -74,7 +73,6 @@ spec:
           volumeMounts:
             - mountPath: '/var/lib/postgresql/data'
               name: postgres-volume
-
 ---
 apiVersion: v1
 kind: Service
