--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.json
@@ -172,7 +172,7 @@
     "Enabled": true
   },
   "SignUrl": {
-    "Secret": "fDmp1K2YveBbfDmp"
+    "Secret": "fDmp1K2YveBbfDmpfDmp1K2YveBbfDmp"
   },
   "Email": {
     "SiteUrl": "https://templateapp.mcc-soft.de",
