--- a/scripts/.env_template
+++ b/scripts/.env_template
@@ -1,5 +1,6 @@
 EMAIL=templateapp@mcc-soft.de
 VIRTUAL_HOST=template.mcc-soft.de
+NAMESPACE=templateapp
 DOCKER_IMAGE=registry.gitlab.com/mcctemplateapp1/main:0.1.1825
 Sentry__Dsn=https://b00b94bddfeb4097a5078a6dc2bf5f03@o920098.ingest.sentry.io/5864957
 Serilog__Remote__Server=logs-01.loggly.com
@@ -11,5 +12,4 @@ Serilog__Elastic__User=
 Serilog__Elastic__Password=
 TestApiEnabled=false
 POSTGRES_DATABASE=template_app
-POSTGRES_EXTERNAL_PORT=5432
 POSTGRES_USER=postgres
