CI: use old domain

--- a/.ci/_stages/dev.env
+++ b/.ci/_stages/dev.env
@@ -1,3 +1,3 @@
-VIRTUAL_HOST=kube2.arturdr.ru
-General__SiteUrl=https://kube2.arturdr.ru
+VIRTUAL_HOST=template.mcc-soft.de
+General__SiteUrl=https://template.mcc-soft.de
 TestApiEnabled=true
