--- a/.ci/azure-deploy-kubernetes.yml
+++ b/.ci/azure-deploy-kubernetes.yml
@@ -17,6 +17,7 @@ steps:
 
   - script: |
       export KUBECONFIG=$(kubeconfig.secureFilePath)
+      echo "##vso[task.setvariable variable=KUBECONFIG]$(kubeconfig.secureFilePath)"
 
       cat ./.ci/_stages/${{ parameters.kubeconfig }}.env
       export $(cat ./.ci/_stages/${{ parameters.stage }}.env | xargs)
