--- a/k8s/app.yaml
+++ b/k8s/app.yaml
@@ -21,6 +21,7 @@ metadata:
     app: templateapp-main-api
 spec:
   replicas: 1
+  revisionHistoryLimit: 0
   selector:
     matchLabels:
       app: templateapp-main-api
