--- a/.ci/azure-deploy-kubernetes.yml
+++ b/.ci/azure-deploy-kubernetes.yml
@@ -23,7 +23,12 @@ steps:
     displayName: export env. variables and kubeconfig
 
   - script: |
-      (kubectl -n templateapp create secret docker-registry docker-registry-secret --docker-server=$(DOCKER_REGISTRY) --docker-username=$(DOCKER_USER) --docker-password=$(DOCKER_TOKEN) -o yaml --dry-run=client | kubectl replace -f -)
+      kubectl create namespace templateapp || echo "continue"
+    displayName: create namespace
+
+  - script: |
+      kubectl -n templateapp create secret docker-registry docker-registry-secret --docker-server=$(DOCKER_REGISTRY) --docker-username=$(DOCKER_USER) --docker-password=$(DOCKER_TOKEN) || \
+        (kubectl -n templateapp create secret docker-registry docker-registry-secret --docker-server=$(DOCKER_REGISTRY) --docker-username=$(DOCKER_USER) --docker-password=$(DOCKER_TOKEN) -o yaml --dry-run=client | kubectl replace -f -)
     displayName: create docker secrets
 
   - script: |
@@ -31,7 +36,8 @@ steps:
     displayName: deploy postgres
 
   - script: |
-      (kubectl -n templateapp create configmap templateapp-configmap --from-env-file=./.ci/_stages/${{ parameters.stage }}.env -o yaml --dry-run=client | kubectl replace -f -)
+      kubectl -n templateapp create configmap templateapp-configmap --from-env-file=./.ci/_stages/${{ parameters.stage }}.env || \
+        (kubectl -n templateapp create configmap templateapp-configmap --from-env-file=./.ci/_stages/${{ parameters.stage }}.env -o yaml --dry-run=client | kubectl replace -f -)
     displayName: apply env variables from ${{ parameters.stage }}.env
 
   - script: |
