--- a/k8s/postgres.yaml
+++ b/k8s/postgres.yaml
@@ -37,6 +37,7 @@ metadata:
     app: templateapp-main-postgres
 spec:
   replicas: 1
+  revisionHistoryLimit: 0
   selector:
     matchLabels:
       app: templateapp-main-postgres
