--- a/.ci/azure-pipelines-template.yml
+++ b/.ci/azure-pipelines-template.yml
@@ -119,21 +119,23 @@ stages:
           - template: ./_stages/dev.yml
         condition: succeeded()
         jobs:
-          - deployment:
-            environment:
-              name: 'DEV'
-              resourceType: VirtualMachine
-            strategy:
-              runOnce:
-                deploy:
-                  steps:
-                    - ${{ if eq(variables.DEPLOY_KUBERNETES, true) }}:
-                        - template: ./azure-deploy-kubernetes.yml
-                          parameters:
-                            kubeconfig: ${{ variables.KUBECONFIG }}
-                            stage: 'dev'
-                    - ${{ if not(eq(variables.DEPLOY_KUBERNETES, true)) }}:
-                        - template: ./azure-deploy.yml
+          - ${{ if eq(variables.DEPLOY_KUBERNETES, true) }}:
+          job:
+            steps:
+            - template: ./azure-deploy-kubernetes.yml
+              parameters:
+                kubeconfig: ${{ variables.KUBECONFIG }}
+                stage: 'dev'
+          - ${{ if not(eq(variables.DEPLOY_KUBERNETES, true)) }}:
+            - deployment:
+              environment:
+                name: 'DEV'
+                resourceType: VirtualMachine
+              strategy:
+                runOnce:
+                  deploy:
+                    steps:
+                      - template: ./azure-deploy.yml
 
   - ${{ if variables.TAG_SOURCES_DEV }}:
       - stage: TagDevSources
