--- a/.ci/azure-pipelines-template.yml
+++ b/.ci/azure-pipelines-template.yml
@@ -110,6 +110,7 @@ stages:
                   name: ${{ variables.DOCKER_TAG }}
 
   - ${{ if eq(variables.ENABLE_DEPLOY, true) }}:
+    - ${{ if eq(variables.DEPLOY_KUBERNETES, true) }}:
       - stage: DeployToDev
         dependsOn:
           - Build
@@ -117,25 +118,33 @@ stages:
         variables:
           - template: ./_stages/_default.yml
           - template: ./_stages/dev.yml
-        condition: succeeded()
-        jobs:
-          - ${{ if eq(variables.DEPLOY_KUBERNETES, true) }}:
+        condition: succeeded()    
+          jobs:
             job:
               steps:
                 - template: ./azure-deploy-kubernetes.yml
                   parameters:
                     kubeconfig: ${{ variables.KUBECONFIG }}
                     stage: 'dev'
-          - ${{ if not(eq(variables.DEPLOY_KUBERNETES, true)) }}:
-              - deployment:
-                environment:
-                  name: 'DEV'
-                  resourceType: VirtualMachine
-                strategy:
-                  runOnce:
-                    deploy:
-                      steps:
-                        - template: ./azure-deploy.yml
+    - ${{ if not(eq(variables.DEPLOY_KUBERNETES, true)) }}:
+      - stage: DeployToDev
+        dependsOn:
+          - Build
+          - DockerTag
+        variables:
+          - template: ./_stages/_default.yml
+          - template: ./_stages/dev.yml
+        condition: succeeded()    
+          jobs:
+            - deployment:
+              environment:
+                name: 'DEV'
+                resourceType: VirtualMachine
+              strategy:
+                runOnce:
+                  deploy:
+                    steps:
+                      - template: ./azure-deploy.yml
 
   - ${{ if variables.TAG_SOURCES_DEV }}:
       - stage: TagDevSources
