Unable to build Docker image locally #100

--- a/package.json
+++ b/package.json
@@ -36,8 +36,9 @@
     "build-frontend": "yarn frontend build",
     "copy-frontend": "yarn copyfiles -u 2 \"frontend/build/**/*\" \"publish/wwwroot\" && yarn copyfiles -u 1 frontend/.env publish/wwwroot",
     "copy-storybook": "yarn copyfiles -u 2 \"frontend/storybook-static/**/*\" \"publish/wwwroot/storybook\"",
-    "docker-build": "cross-env-shell docker build -t templateapp:latest templateapp:$npm_package_version -f publish/Dockerfile publish",
-    "build-with-docker": "yarn build && yarn docker-build",
+    "build-import-meta-env": "npx pkg ./node_modules/@import-meta-env/cli/bin/import-meta-env.js -t node16-linux -o ./publish/import-meta-env",
+    "docker-build": "docker build -t templateapp:latest -t templateapp:$npm_package_version -f publish/Dockerfile publish",
+    "build-with-docker": "yarn build && yarn build-import-meta-env && yarn docker-build",
     "build": "yarn prestart && yarn build-dotnet && yarn build-frontend && yarn copy-frontend",
     "prestart": "yarn copy-translations-to-backend",
     "copy-translations-to-backend": "yarn cpy frontend/public/dictionaries/* dictionaries_tmp/ --flat && yarn renamer --force --verbose -f \"/translation.(.*).json/\" -r '../webapi/src/MccSoft.TemplateApp.App/Dictionaries/$1/Frontend.json' './dictionaries_tmp/*'",
