--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "test": "yarn frontend test",
     "generate-api-clients": "yarn frontend generate-api-clients",
     "generate-api-client-remote": "yarn frontend generate-api-client-remote",
-    "rename": "npx ts-node scripts/rename-script.ts",
-    "pull-template-changes": "npx ts-node scripts/pull-template-changes.ts && yarn install && yarn typecheck",
+    "rename": "npx ts-node --esm scripts/rename-script.ts",
+    "pull-template-changes": "npx ts-node --esm scripts/pull-template-changes.ts && yarn install && yarn typecheck",
     "frontend": "yarn workspace @templateApp/frontend",
     "e2e": "yarn workspace e2e",
     "build-dotnet": "rimraf publish && cross-env-shell dotnet publish webapi/src/MccSoft.TemplateApp.App/MccSoft.TemplateApp.App.csproj -c Release -o publish -p:Version=$npm_package_version",
