--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "@types/semver": "7.5.0",
+    "@types/yargs": "17.0.24",
     "change-case": "4.1.2",
     "copyfiles": "2.3.0",
     "cpy-cli": "4.2.0",
