--- a/webapi/src/MccSoft.TemplateApp.App/MccSoft.TemplateApp.App.csproj
+++ b/webapi/src/MccSoft.TemplateApp.App/MccSoft.TemplateApp.App.csproj
@@ -41,12 +41,12 @@
   <ItemGroup>
     <PackageReference Include="Roslyn.Analyzers" Version="1.0.3.4" />
     <PackageReference Include="Vp.Roslyn.Analyzers.All" Version="1.0.0" />
-    <PackageReference Include="Metalama.Framework" Version="2023.0.102-rc" />
+    <PackageReference Include="Metalama.Framework" Version="2023.0.115" />
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="7.0.5" />
     <PackageReference Include="Audit.NET.Serilog" Version="21.0.0" />
     <PackageReference Include="Audit.NET.PostgreSql" Version="21.0.0" />
-    <PackageReference Include="Hangfire.AspNetCore" Version="1.8.0" />
-    <PackageReference Include="Hangfire.Core" Version="1.8.0" />
+    <PackageReference Include="Hangfire.AspNetCore" Version="1.8.1" />
+    <PackageReference Include="Hangfire.Core" Version="1.8.1" />
     <PackageReference Include="Hangfire.Dashboard.BasicAuthorization" Version="1.0.2" />
     <PackageReference Include="Hangfire.PostgreSql" Version="1.19.12" />
     <PackageReference Include="I18Next.Net" Version="1.0.0" />
@@ -78,7 +78,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Shaddix.OpenIddict.ExternalAuthentication" Version="2.6.4" />
+    <PackageReference Include="Shaddix.OpenIddict.ExternalAuthentication" Version="2.6.6" />
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.2" />
   </ItemGroup>
 
