--- a/frontend/package.json
+++ b/frontend/package.json
@@ -80,6 +80,7 @@
     "@typescript-eslint/parser": "5.59.0",
     "@vitejs/plugin-react": "4.0.0",
     "@vitejs/plugin-react-swc": "3.3.1",
+    "autoprefixer": "10.4.14",
     "babel-loader": "8.3.0",
     "concurrently": "8.0.1",
     "cross-env": "7.0.3",
