--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "@types/diff": "5.0.3",
     "@types/semver": "7.5.0",
     "@types/yargs": "17.0.24",
     "change-case": "4.1.2",
     "copyfiles": "2.3.0",
     "cpy-cli": "4.2.0",
     "cross-env": "7.0.3",
+    "diff": "5.1.0",
     "fast-xml-parser": "4.2.2",
     "json": "11.0.0",
     "node-replace": "0.3.3",
