--- a/.gitignore
+++ b/.gitignore
@@ -369,3 +369,4 @@ webapi/src/MccSoft.TemplateApp.App/wwwroot/css/frontend.css.map
 frontend/storybook-static
 e2e/.env.local
 scripts/.env
+scripts/1.ts
