update to latest react-router and Data API

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,8 +43,9 @@
     "react-paginate": "8.2.0",
     "react-query-swagger": "15.7.8",
     "react-redux": "8.0.2",
-    "react-router": "6.3.0",
-    "react-router-dom": "6.3.0",
+    "react-router": "6.11.2",
+    "react-router-dom": "6.11.2",
+    "react-router-prompt": "0.5.3",
     "react-router-url-params": "0.7.5",
     "react-textarea-autosize": "8.3.4",
     "react-use": "17.4.0",
